<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <com.github.florent37.diagonallayout.DiagonalLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="266dp"
        diagonal:diagonal_angle="10"
        android:elevation="0dp"
        android:paddingBottom="16dp"
        diagonal:diagonal_direction="left"
        diagonal:diagonal_position="bottom"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        >

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/mKenburns"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_action_background_five"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stealer Of Souls"
            android:textColor="@android:color/white"
            android:layout_gravity="top|left"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:textSize="25sp"
            />

    </com.github.florent37.diagonallayout.DiagonalLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="190dp"
        android:elevation="15dp"
        android:layout_centerHorizontal="true"
        diagonal:civ_border_color="@color/colorAccent"
        android:background="@drawable/diagonallayout_circle"
        android:src="@drawable/ic_action_avata"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/avatar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <RelativeLayout
                    android:id="@+id/layout_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/img_about"
                        android:layout_width="@dimen/size_img"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_about_expressa"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_action_user" />

                    <TextView
                        android:id="@+id/tv_about_expressa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@+id/img_about"
                        android:layout_centerVertical="true"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/about_expressa"
                        android:textColor="@color/color_text_menu_1"
                        android:textSize="@dimen/size_text_15sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_r"
                        android:layout_width="@dimen/size_img"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/tv_rate"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_action_rating" />

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@+id/img_r"
                        android:layout_centerVertical="true"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/rate_app"
                        android:textColor="@color/color_text_menu_1"
                        android:textSize="@dimen/size_text_15sp" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_share"
                        android:layout_width="@dimen/size_img"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_action_love" />

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@+id/img_share"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/share_app"
                        android:textColor="@color/color_text_menu_1"
                        android:textSize="@dimen/size_text_15sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/layout_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/img_feed"
                        android:layout_width="@dimen/size_img"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_action_message" />

                    <TextView
                        android:id="@+id/tv_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_toRightOf="@+id/img_feed"
                        android:drawablePadding="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/feedback"
                        android:textColor="@color/color_text_menu_1"
                        android:textSize="@dimen/size_text_15sp" />
                </RelativeLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:id="@+id/layout_language"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:text="@string/language"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/size_text_15sp" />

                    <ImageView
                        android:id="@+id/img_language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:adjustViewBounds="true"
                        android:src="@drawable/vietnam_flag" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:adjustViewBounds="true"
                        android:padding="5dp"
                        android:src="@drawable/arrow_right_ico" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/setting_voice"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_voice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="xxx"
                        android:textColor="@color/secondary"
                        android:textSize="@dimen/size_text_15sp" />

                    <TextView
                        android:id="@+id/name_voice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="right|center_vertical"
                        android:text="xxxx"
                        android:textColor="@color/highlight"
                        android:textSize="@dimen/size_text_15sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:adjustViewBounds="true"
                        android:padding="5dp"
                        android:src="@drawable/arrow_right_ico" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/size_text"
                        android:textColor="@color/secondary"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/sizelabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="right|center_vertical"
                        android:text="@string/normal"
                        android:textColor="@color/highlight"
                        android:textSize="15sp"/>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:adjustViewBounds="true"
                        android:padding="5dp"
                        android:src="@drawable/arrow_right_ico" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:text="@string/version_app"
                android:textColor="@color/secondary"
                android:textSize="15sp" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/textView"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="104dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:fontFamily="sans-serif-condensed"
            android:text="Gmail:nguyenxuanhoi.2903@gmail.com"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
